--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,3 +8,17 @@
     align-items: center; /* Alineación vertical centrada */
     justify-items: center; /* Alineación horizontal centrada */
 }
+
+.titles {
+    font-family: "Bebas Neue", serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 2px;
+    padding: 80px 20px 30px 20px;
+    text-align: center;
+}
+
+.titles h1 {
+    color: rgb(22, 130, 253);
+    font-size: 45px;
+}
