--- a/src/app/components/cursos/curso-list/curso-list.component.css
+++ b/src/app/components/cursos/curso-list/curso-list.component.css
@@ -1,3 +1,53 @@
+.container1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px 0;
+    padding: 10px;
+    border: 1.5px solid rgba(255, 255, 255, 0.699);
+    border-radius: 5px;
+}
+
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-container label {
+    font-size: 17px;
+}
+
+.input {
+    color: black;
+    font-family: "Manrope", sans-serif;
+    font-size: 15px;
+    width: 130px;
+    height: 22px;
+    border-radius: 3px;
+    margin: 0 5px;
+    box-sizing: border-box;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.search-container button {
+    color: rgb(25, 25, 25);
+    background-color: rgb(53, 147, 254);
+    border: none;
+    border-radius: 3px;
+    font-size: 15px;
+    padding: 3px 5px;
+}
+
+.search-container button:hover {
+    background-color: rgb(79, 161, 255);
+    transition: .15s ease-in;
+    cursor: pointer;
+}
+
 .table-container {
     width: 860px;
     max-height: 300px; /* Establece la altura máxima que deseas */
@@ -125,4 +175,30 @@ tbody tr:hover {
 #back-item:hover {
     background-color: rgb(232, 232, 232);
     transition: .15s ease-in;
+}
+
+.alumnos-container {
+    margin-top: 30px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    justify-self: center;
+    flex-direction: column;
+    border: 1.5px solid rgba(255, 255, 255, 0.699);
+    border-radius: 3px;
+    padding: 5px;
+    width: auto;
+}
+
+.alumnos-container ul {
+    list-style: none;
+    margin: 10px 15px;
+    padding: 0;
+}
+
+p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
 }
