--- a/src/app/components/temas/tema-add/tema-add.component.css
+++ b/src/app/components/temas/tema-add/tema-add.component.css
@@ -8,7 +8,7 @@
 .form {
     width: 550px;
     background-color: rgb(28, 28, 28);
-    border: 3px solid white;
+    border: 3px solid rgba(255, 255, 255, 0.699);
     border-radius: 8px;
     padding: 30px;
     display: flex;
